# ingress-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  gunicorn_config.py  k8s-deployment.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build-and-release.yml  main.yaml  release.yaml
templates/: error.html  index.html
tests/: test_app.py
