[tool.poetry]
name = "ingress-dashboard"
version = "0.1.0"
description = "Kubernetes Ingress Dashboard"
authors = ["Michael Trip <michael@alcatrash.org>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.1.0"
kubernetes = "^24.2.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
flake8 = "^4.0.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
